# Mosquito_API

./: .env  .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
